// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`isDraggable is rendered 1`] = `
<div
  className="kbnFieldButton kbnFieldButton--isDraggable"
>
  <button
    className="kbn-resetFocusState kbnFieldButton__content"
  >
    <div
      className="kbnFieldButton__fieldIcon"
    />
    <div
      className="kbnFieldButton__name"
    />
  </button>
  <div
    className="kbnFieldButton__append"
  />
</div>
`;

exports[`sizes m is applied 1`] = `
<div
  className="kbnFieldButton"
>
  <button
    className="kbn-resetFocusState kbnFieldButton__content"
  >
    <div
      className="kbnFieldButton__fieldIcon"
    />
    <div
      className="kbnFieldButton__name"
    />
  </button>
  <div
    className="kbnFieldButton__append"
  />
</div>
`;

exports[`sizes s is applied 1`] = `
<div
  className="kbnFieldButton kbnFieldButton--small"
>
  <button
    className="kbn-resetFocusState kbnFieldButton__content"
  >
    <div
      className="kbnFieldButton__fieldIcon"
    />
    <div
      className="kbnFieldButton__name"
    />
  </button>
  <div
    className="kbnFieldButton__append"
  />
</div>
`;
